8245717: VM option "-XX:EnableJVMCIProduct" could not be repetitively enabled

Reviewed-by: dholmes, kvn