test/hotspot/jtreg/compiler/jvmci/TestEnableJVMCIProduct.java
@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @bug 8235539
+ * @bug 8235539 8245717
  * @summary Tests effect of -XX:+EnableJVMCIProduct on EnableJVMCI and UseJVMCICompiler
  * @requires vm.jvmci
  * @library /test/lib
@@ -65,6 +65,10 @@ public class TestEnableJVMCIProduct {
         test("-XX:-EnableJVMCI",
             new Expectation("EnableJVMCI", "false", "command line"),
             new Expectation("UseJVMCICompiler", "false", "default"));
+        test("-XX:+EnableJVMCIProduct",
+            new Expectation("EnableJVMCIProduct", "true", "command line"),
+            new Expectation("EnableJVMCI", "true", "default"),
+            new Expectation("UseJVMCICompiler", "true", "default"));
     }
 
     static void test(String explicitFlag, Expectation... expectations) throws Exception {
